Mass update of .desktop files - wrap YaST calls in xdg-su where applicable, remove X-KDE-SubstituteUID bnc#540627
svn path=/trunk/drbd/; revision=60356

--- a/src/drbd.desktop
+++ b/src/drbd.desktop
@@ -17,8 +17,7 @@ X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoInstResource=drbd
 
 Icon=yast-iscsi-client
-Exec=/sbin/yast2 drbd 
+Exec=xdg-su -c "/sbin/yast2 drbd"
 
 Name=Drbd
 GenericName=drbd
-X-KDE-SubstituteUID=true
