--- a/agents/Makefile.am
+++ b/agents/Makefile.am
@@ -1,7 +1,7 @@
 # Makefile.am for drbd/agents
 
 agent_SCRIPTS = \
-	ag_drbd drbd.rb.yy
+	ag_drbd
 
 scrconf_DATA = \
 	drbd.scr
@@ -11,4 +11,4 @@ ag_drbd: drbd.rb.yy
 	racc -e "/usr/bin/ruby" -v -g drbd.rb.yy -o ag_drbd
 	chmod ugo+x ag_drbd
 
-EXTRA_DIST = $(agent_SCRIPTS) $(scrconf_DATA)
+EXTRA_DIST = $(agent_SCRIPTS) $(scrconf_DATA) drbd.rb.yy
