YCP Killer: Apply changes needed for Ruby translation
This module needed few changes before it was possible to translate its
YCP files into Ruby. This commit performs them.

The commit is a result of running YCP Killer's "patch" command. The
history of the applied patch is available here:

  https://github.com/yast/ycp-killer/commits/master/patches/drbd.patch

See also:

  https://github.com/yast/ycp-killer

--- a/yast2-drbd.spec.in
+++ b/yast2-drbd.spec.in
@@ -6,6 +6,8 @@ Group:          System/YaST
 BuildRequires:  perl-XML-Writer ruby rubygem-racc update-desktop-files yast2 yast2-devtools yast2-testsuite
 Requires:       yast2 
 BuildArch:      noarch
+Requires:       yast2-ruby-bindings >= 1.0.0
+
 Summary:        YaST2 - DRBD Configuration
 
 %description
@@ -30,7 +32,7 @@ Authors:
 %files
 %defattr(-,root,root)
 @yncludedir@/drbd/
-@clientdir@/drbd.ycp
+@clientdir@/drbd.rb
 @moduledir@/Drbd.*
 @desktopdir@/drbd.desktop
 @scrconfdir@/*.scr
