--- a/src/desktop/drbd.desktop
+++ b/src/desktop/drbd.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Type=Application
-Categories=Qt;X-SuSE-YaST;X-SuSE-YaST-Misc;
+Categories=Qt;X-SuSE-YaST;X-SuSE-YaST-High_Availability;
 
 X-KDE-ModuleType=Library
 X-KDE-HasReadOnlyMode=true
 X-KDE-Library=yast2
 X-SuSE-YaST-Call=drbd
 
-X-SuSE-YaST-Group=Misc
+X-SuSE-YaST-Group=High_Availability
 X-SuSE-YaST-Argument=
 X-SuSE-YaST-RootOnly=true
 X-SuSE-YaST-AutoInst=
