--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,9 @@
 yncludedir = @yncludedir@/drbd
 
 client_DATA =			\
-	drbd.ycp
+	drbd.ycp		\
+	drbd_auto.ycp	\
+	drbd_proposal.ycp
 
 ynclude_DATA =	       \
 	helps.ycp		   \
