--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,34 +1,30 @@
-# Makefile.am for drbd/src
+# Sources for drbd
+
+module_DATA = \
+  modules/Drbd.rb
+
+client_DATA = \
+  clients/drbd_auto.rb \
+  clients/drbd.rb \
+  clients/drbd_proposal.rb
 
 yncludedir = @yncludedir@/drbd
+ynclude_DATA = \
+  include/drbd/dialogs.rb \
+  include/drbd/common.rb \
+  include/drbd/complex.rb \
+  include/drbd/startup_conf.rb \
+  include/drbd/resource_conf.rb \
+  include/drbd/helps.rb \
+  include/drbd/global_conf.rb \
+  include/drbd/wizards.rb
 
-client_DATA =			\
-	drbd.ycp		\
-	drbd_auto.ycp	\
-	drbd_proposal.ycp
+scrconf_DATA = \
+  scrconf/drbd.scr
 
-ynclude_DATA =	       \
-	helps.ycp		   \
-	common.ycp		   \
-	wizards.ycp		   \
-	dialogs.ycp		   \
-	complex.ycp		   \
-	global_conf.ycp	   \
-	startup_conf.ycp   \
-	resource_conf.ycp
+desktop_DATA = \
+  desktop/drbd.desktop
 
-
-desktop_DATA =			\
-	drbd.desktop
-
-module_DATA =			\
-	Drbd.ycp		
-
-# create a symlink for local build, #145327
-drbd:
-	ln -sf . $@
-ycpchook = drbd
-
-EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(module_DATA) $(desktop_DATA)
+EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(desktop_DATA)
 
 include $(top_srcdir)/Makefile.am.common
