New generate ag_drbd by rubygem-racc 1.4.14. Add path of ruby manually.

--- a/src/servers_non_y2/Makefile.am
+++ b/src/servers_non_y2/Makefile.am
@@ -4,7 +4,10 @@ agent_SCRIPTS = \
 	ag_drbd drbd.rb.yy
 
 #Comment due to buildrequires :rubygem-racc 
+# In openSUSE 11.3 it used racc-1.4.5
 # is neccary in yast ci(github)a but invalid in ibs
+# Remember #!/usr/bin/ruby is necessary,
+# need to add manually
 #
 #ag_drbd: drbd.rb.yy
 #	rm -f drbd.rb
