--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
 #all generated Makefile and Makefile.in, try to contain all subdirs
-Makefile
-Makefile.in
-
-*.out.tmp
-*.err.tmp
-/package/*.tar.bz2
-/Makefile.am
-/Makefile.am.common
+.yardoc
+*.ami
+*.pot
 /acinclude.m4
 /aclocal.m4
-/autodocs-cc-base.ami
-/autodocs-cc-off.ami
-/autodocs-cc.ami
-/autodocs-ycp.ami
 /autom4te.cache/
 /config.guess
 /config.log
@@ -25,9 +16,15 @@ Makefile.in
 /install-sh
 /libtool
 /libtool.m4
+/lt~obsolete.m4
 /ltmain.sh
 /ltoptions.m4
 /ltsugar.m4
 /ltversion.m4
-/lt~obsolete.m4
+/Makefile.am
+/Makefile.am.common
 /missing
+/package/*.tar.bz2
+doc
+Makefile
+Makefile.in
