--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,7 @@ scrconf_DATA = \
   scrconf/drbd_lvm.scr
 
 desktop_DATA = \
-  desktop/drbd.desktop
+  desktop/org.openSUSE.YaST.DRBD.desktop
 
 symbolicdir = @icondir@/hicolor/symbolic/apps
 symbolic_DATA = \
